# dist-matrix-simd-benchmark

./: .env  .gitignore  Dockerfile  Makefile  Pipfile  README.md  benchmark.py  docker-compose.yml
cpp/: dataset.cpp  main.cpp  main_old.cpp
dataset-gen/: Cargo.toml
dataset-gen/src/: main.rs
rust/: Cargo.toml
rust/dataset/: Cargo.toml
rust/dataset/src/: lib.rs
rust/src/: main.rs
